--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -10,7 +10,6 @@
   justify-content: center;
   padding: 16px;
   position: relative;
-  padding-bottom: 60px; /* Hauteur de la navbar */
 }
 
 .letter-content {
@@ -42,21 +41,13 @@
   position: relative;
 }
 
-.recipient-title {
-  font-family: "Mea Culpa", cursive;
-  font-size: 32px;
-  color: #ffffff;
-  margin-bottom: 0;
-  position: relative;
-  z-index: 2;
-}
-
+.recipient-title,
 .recipient-prompt {
   font-family: "Mea Culpa", cursive;
   font-size: 32px;
   color: #ffffff;
   text-align: center;
-  position: relative;
+  margin: 0;
   z-index: 2;
 }
 
@@ -95,7 +86,6 @@
 @media (min-width: 768px) {
   .home-container {
     padding: 32px;
-    padding-bottom: 72px; /* Hauteur de la navbar desktop */
   }
 
   .letter-content {
@@ -119,8 +109,9 @@
     font-size: 48px;
   }
 
-  .bottom-bar {
-    padding: 24px 32px;
+  .cloud-image {
+    width: 320px;
+    top: -60px;
   }
 }
 
@@ -134,6 +125,9 @@
   align-items: center;
   position: relative;
   z-index: 2;
+  background: none;
+  border: none;
+  padding: 0;
 }
 
 .link-text:hover {
@@ -151,12 +145,5 @@
   height: auto;
   pointer-events: none;
   z-index: 1;
-}
-
-/* Ajustement pour desktop */
-@media (min-width: 768px) {
-  .cloud-image {
-    width: 320px;
-    top: -60px;
-  }
+  background: none;
 }
