--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -15,11 +15,19 @@
 .letter-content {
   width: 100%;
   min-height: calc(100dvh - 32px);
-  background: transparent;
   padding: 24px 16px;
   display: flex;
   flex-direction: column;
   position: relative;
+}
+
+.cloud-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 .main-title {
@@ -49,6 +57,7 @@
   text-align: center;
   margin: 0;
   z-index: 2;
+  position: absolute;
 }
 
 .bottom-bar {
@@ -140,10 +149,35 @@
 
 .cloud-image {
   position: absolute;
-  top: -40px;
   width: 280px;
   height: auto;
   pointer-events: none;
   z-index: 1;
-  background: none;
+}
+
+.cloud-container {
+  position: relative;
+  width: 280px;
+  height: 150px;
+}
+
+.cloud-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-family: "Mea Culpa", cursive;
+  z-index: 2;
+}
+
+.cloud-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 192, 203, 0.4); /* Rose transparent */
+  filter: blur(15px);
+  border-radius: 50px;
 }
