--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -3,24 +3,23 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 60px;
-  padding: 0 16px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
+  padding: 16px;
+  background: var(--pink-100);
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
   z-index: 1000;
 }
 
 .navbar-text {
-  font-family: "Poppins", sans-serif;
   color: #ffffff;
+  text-decoration: none;
   font-size: 16px;
   position: relative;
-  text-decoration: none;
   padding: 5px;
+  opacity: 0.7;
 }
 
 .navbar-text::after {
@@ -35,10 +34,22 @@
   transition: width 0.3s ease;
 }
 
+.navbar-text:hover,
+.navbar-text.selected {
+  opacity: 1;
+}
+
 .navbar-text:hover::after,
 .navbar-text:active::after,
 .navbar-text.selected::after {
   width: 100%;
+}
+
+/* Ajustement pour iPhone avec safe area */
+@supports (padding: max(0px)) {
+  .navbar {
+    padding-bottom: max(16px, env(safe-area-inset-bottom));
+  }
 }
 
 .navbar-link {
@@ -68,11 +79,11 @@
 /* Tablette et Desktop */
 @media (min-width: 768px) {
   .navbar {
-    padding: 0 32px;
     height: 72px;
+    width: cover;
   }
 
   .navbar-text {
-    font-size: 19px;
+    font-size: 20peuxpx;
   }
 }
