--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+body {
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
+}
+
+#root {
+  width: 100%;
+  overflow-x: hidden;
+}
