--- a/client/src/styles/FutureMe.css
+++ b/client/src/styles/FutureMe.css
@@ -12,10 +12,12 @@
 }
 
 .letters-list {
-  padding: 12px;
-  margin: 0;
-  width: 100%;
-  overflow-x: hidden;
+  padding: 16px;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  height: calc(100dvh - 60px - 50%);
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 /* Pour Chrome, Safari et Opera */
@@ -66,6 +68,7 @@
   margin: 0 16px 16px;
   border-radius: 12px;
   color: #000000;
+  height: 50%;
 }
 
 .writing-area {
@@ -240,9 +243,9 @@ option[value=""][disabled] {
   }
 
   .letter-editor {
+    height: auto;
     margin: 20px;
     flex: 1;
-    overflow-y: auto;
   }
 }
 
